--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -23,45 +23,47 @@ jobs:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
       - name: Install alembic
-        run: pip install alembic
-
-      - name: Configure Docker
-        run: gcloud auth configure-docker
-
-      - name: Build image
-        run: docker build -t ${{ secrets.GCLOUD_PROJECT_ID }}/${{ secrets.IMAGE_TAG }}:${{ github.sha }} .
-
-      - name: Push image
-        run: docker push ${{ secrets.GCLOUD_PROJECT_ID }}/${{ secrets.IMAGE_TAG }}:${{ github.sha }}
-
-      - name: Run Cloud SQL Proxy
         run: |
-          if ! [ -x "$(command -v cloud_sql_proxy)" ]; then
-            echo 'Cloud SQL Proxy not installed. Installing.' >&2
-            wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
-            sudo install cloud_sql_proxy /usr/bin
-          else
-            echo 'Cloud SQL Proxy already installed'
-            fi
+          pip install alembic
+          alembic --version
 
-      - name: Start SQL Proxy
-        run: |
-          echo 'Starting SQL Proxy'
-          cloud_sql_proxy -instances=${{ secrets.CLOUD_SQL_INSTANCE_NAME }}=tcp:5433 & sleep 2
+      # - name: Configure Docker
+      #   run: gcloud auth configure-docker
 
-          echo 'Running migrations'
-          DATABASE_URL="postgresql://${{ secrets.DATABASE_USER }}:${{ secrets.DATABASE_PASSWORD }}@localhost:5433/${{ secrets.DATABASE_NAME }}" alembic upgrade head
+      # - name: Build image
+      #   run: docker build -t ${{ secrets.GCLOUD_PROJECT_ID }}/${{ secrets.IMAGE_TAG }}:${{ github.sha }} .
 
-      - name: Stop Cloud SQL Proxy
-        run: |
-          echo 'Stopping SQL proxy'
-          PID=$(ps aux | grep -v grep | grep cloud_sql_proxy | awk '{print $2}')
-          if [ -n "$PID" ]; then
-            echo "Killing $PID"
-            kill -9 $PID
-          else
-            echo "No SQL proxy to stop"
-          fi
+      # - name: Push image
+      #   run: docker push ${{ secrets.GCLOUD_PROJECT_ID }}/${{ secrets.IMAGE_TAG }}:${{ github.sha }}
+
+      # - name: Run Cloud SQL Proxy
+      #   run: |
+      #     if ! [ -x "$(command -v cloud_sql_proxy)" ]; then
+      #       echo 'Cloud SQL Proxy not installed. Installing.' >&2
+      #       wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+      #       sudo install cloud_sql_proxy /usr/bin
+      #     else
+      #       echo 'Cloud SQL Proxy already installed'
+      #       fi
+
+      # - name: Start SQL Proxy
+      #   run: |
+      #     echo 'Starting SQL Proxy'
+      #     cloud_sql_proxy -instances=${{ secrets.CLOUD_SQL_INSTANCE_NAME }}=tcp:5433 & sleep 2
+
+      #     echo 'Running migrations'
+      #     DATABASE_URL="postgresql://${{ secrets.DATABASE_USER }}:${{ secrets.DATABASE_PASSWORD }}@localhost:5433/${{ secrets.DATABASE_NAME }}" alembic upgrade head
+
+      # - name: Stop Cloud SQL Proxy
+      #   run: |
+      #     echo 'Stopping SQL proxy'
+      #     PID=$(ps aux | grep -v grep | grep cloud_sql_proxy | awk '{print $2}')
+      #     if [ -n "$PID" ]; then
+      #       echo "Killing $PID"
+      #       kill -9 $PID
+      #     else
+      #       echo "No SQL proxy to stop"
+      #     fi
 
       # - name: Deploy to Cloud Run
       #   run: >
