look for alembic

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Install alembic
         run: |
           pip install alembic
+          pip show alembic
           alembic --version
 
       # - name: Configure Docker
